# downscale

./: .gitignore  .gitkeep  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
Const/: env_setting.sh  preprocess_config.yaml  snapshot_events.yaml
GrADS/: ...  cbarn.gs  colors.gs  evaluate_differences.gs  evaluate_spatial_maps.gs  evaluate_temporal_stats.gs  snapshot_difference.gs  snapshot_temperature.gs
Python/: README.md  __init__.py  data_utils.py  evaluate_model.py  evaluate_xgboost.py  inference_xgboost.py  preprocess_data.py  test_setup.py  train_xgboost.py  write_binary.py
Sh/: F01_preprocess_slurm.sh  F02_train_slurm.sh  F03_inference_evaluate.sh  F03_inference_evaluate_slurm.sh  F04_snapshots_slurm.sh  README_PREPROCESSING.md  README_TRAINING.md  cdo_preprocess.sh  evaluate_model.sh  evaluate_slurm.sh  evaluate_xgboost.sh  generate_snapshots.sh  gsscripts.sh  inference_slurm.sh  inference_xgboost.sh  preprocess_slurm.sh  run_grads_eval.sh  submit_preprocess.sh  train_xgboost.sh
