[tool.poetry]
name = "downscale"
version = "0.1.0"
description = "XGBoost-based downscaling system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/iyui1223/downscale"
keywords = ["downscaling", "meteorology", "xgboost", "machine-learning", "climate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
packages = [{include = "Python"}]

[tool.poetry.dependencies]
python = "^3.8"

# Core scientific computing
numpy = "^1.21.0"
scipy = "^1.7.0"
pandas = "^1.3.0"

# Machine learning
xgboost = "^1.7.0"
scikit-learn = "^1.0.0"

# NetCDF and meteorological data handling
netCDF4 = "^1.6.0"
xarray = "^2022.3.0"
dask = {extras = ["complete"], version = "^2022.1.0"}
h5netcdf = "^1.0.0"

# Geospatial tools
rasterio = "^1.3.0"
pyproj = "^3.3.0"

# Plotting and visualization
matplotlib = "^3.5.0"
seaborn = "^0.11.0"
cartopy = "^0.20.0"

# Utilities
tqdm = "^4.64.0"
pyyaml = "^6.0"
joblib = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"
isort = "^5.10.0"
mypy = "^0.950"
jupyter = "^1.0.0"
ipython = "^8.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=Python --cov-report=term-missing"
